# memristor_processing

./: .gitignore  CLAUDE.md  data.dvc
.dvc/: config
config/: procedures.yml
notebooks/: Mayo.ipynb  Semana_1.ipynb  Semana_2.ipynb  Semana_4.ipynb  pyproject.toml  utils.py
scripts/: load_data.py  plot_fom_vs_power.py  plot_hysteresis.py  plot_hysteresis_vs_power.py  plot_iv_overlays.py  plot_iv_statistics.py  plot_style.py
src/averaging/: __init__.py
src/derived/: __init__.py  metric_pipeline.py
src/derived/algorithms/: __init__.py  hysteresis.py
src/derived/extractors/: __init__.py  coercive_voltage_extractor.py  hysteresis_area_extractor.py  on_off_ratio_extractor.py  poly_corrected_hysteresis_extractor.py  raw_hysteresis_extractor.py
src/models/: derived_metrics.py
src_kedro/nanolab_processing_base/pipelines/SnS_preprocessing/: __init__.py  nodes.py  pipeline.py
src_kedro/nanolab_processing_base/pipelines/preprocessing/: nodes.py  pipeline.py
tests/: test_hysteresis.py
